--- a/examples/manifest.html
+++ b/examples/manifest.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
   <head>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0/dist/leaflet.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.0.0/dist/leaflet.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="../leaflet-iiif.js"></script>
   </head>
