--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-    <script src="../leaflet-iiif.js"></script>
+    <script src="../dist/leaflet-iiif.js"></script>
   </head>
   <body>
     <div id="map">
