--- a/examples/manifest.html
+++ b/examples/manifest.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../leaflet-iiif.js"></script>
+    <script src="../dist/leaflet-iiif.js"></script>
   </head>
   <body>
     <div id="map">
